bmc-deployer/bmc/template/os/ip6tables
# Generated by ip6tables-save v1.4.7 on Mon Aug  4 15:27:13 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m multiport --dports 8140,8139 -m comment --comment "000 puppet v6" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 22,80,111,161,162,443,1389,3000,25151,7788,9999 -m comment --comment "001 basetcp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8080,8090,8888,662,875,2020,2049,4001,4045,4577 -m comment --comment "002 bvpstcp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 57004,57005,57006 -m comment --comment "003 hyperic ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 514 -m comment --comment "004 syslog ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 514 -m comment --comment "004 syslogudp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 6162 -m comment --comment "006 embmudp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 111,123,623,1129,9876,25151 -m comment --comment "010 baseudp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 662,875,2020,2049,4001,4045 -m comment --comment "011 nfsudp ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 13724,1556,13783,13722 -m comment --comment "012 netbackup ipv6" -m state --state NEW -j ACCEPT 
-A INPUT -p ipv6-icmp -m comment --comment "100 icmpv6" -j ACCEPT 
-A INPUT -m comment --comment "900 related established v6" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -m comment --comment "901 local loop v6" -j ACCEPT 
-A INPUT -m comment --comment "902 log v6" -j LOG --log-prefix "IPTABLES_DROPPED_PACKET" 
-A INPUT -m comment --comment "999 drop all v6" -j DROP 
-A OUTPUT -p tcp -m multiport --dports 8140,8139 -m comment --comment "1000 puppet v6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 22,80,111,161,162,443,1389,3000,25151,7788,9999 -m comment --comment "1001 basetcp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 8080,8090,8888,662,875,2020,2049,4001,4045,4577 -m comment --comment "1002 bvpstcp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 57004,57005,57006 -m comment --comment "1003 hyperic ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 514 -m comment --comment "1004 syslog ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 514 -m comment --comment "1004 syslogudp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 6162 -m comment --comment "1006 embmudp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 111,123,623,1129,9876,25151 -m comment --comment "1010 baseudp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 662,875,2020,2049,4001,4045 -m comment --comment "1011 nfsudp ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 13724,1556,13783,13722 -m comment --comment "1012 netbackup ipv6" -m state --state NEW -j ACCEPT 
-A OUTPUT -p ipv6-icmp -m comment --comment "1100 icmpv6" -j ACCEPT 
-A OUTPUT -m comment --comment "1900 related established v6" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -m comment --comment "1901 local loop v6" -j ACCEPT 
-A OUTPUT -m comment --comment "1902 log v6" -j LOG --log-prefix "IPTABLES_DROPPED_PACKET" 
-A OUTPUT -m comment --comment "1999 drop all v6" -j DROP 
COMMIT
# Completed on Mon Aug  4 15:27:13 2014
