bmc-deployer/bmc/template/os/iptables
# Generated by iptables-save v1.4.7 on Fri Aug  8 10:32:28 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m multiport --dports 8140,8139 -m comment --comment "000 puppet" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 22,80,111,161,162,443,1389,3000,25151,7788,9999 -m comment --comment "001 basetcp" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8080,8090,8888,662,875,2020,2049,4001,4045,4577 -m comment --comment "002 bvpstcp" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 57004,57005,57006 -m comment --comment "003 hyperic" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 514 -m comment --comment "004 syslog" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 514 -m comment --comment "004 syslogudp" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 6162 -m comment --comment "006 embmudp" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 111,123,623,1129,9876,25151 -m comment --comment "010 baseudp" -m state --state NEW -j ACCEPT 
-A INPUT -p udp -m multiport --dports 662,875,2020,2049,4001,4045 -m comment --comment "011 nfsudp" -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 13724,1556,13783,13722 -m comment --comment "012 netbackup" -m state --state NEW -j ACCEPT 
-A INPUT -s 10.175.132.229/32 -p udp -m multiport --sports 5093 -m comment --comment "013 sentinel1" -m state --state NEW -j ACCEPT 
-A INPUT -s 10.175.132.231/32 -p udp -m multiport --sports 5093 -m comment --comment "014 sentinel2" -m state --state NEW -j ACCEPT 
-A INPUT -d 10.175.132.229/32 -p udp -m multiport --dports 5093 -m comment --comment "015 sentinel3" -m state --state NEW -j ACCEPT 
-A INPUT -d 10.175.132.231/32 -p udp -m multiport --dports 5093 -m comment --comment "016 sentinel4" -m state --state NEW -j ACCEPT 
-A INPUT -p icmp -m comment --comment "100 icmp" -j ACCEPT 
-A INPUT -m comment --comment "900 related established" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -m comment --comment "901 local loop" -j ACCEPT 
-A INPUT -m comment --comment "902 log" -j LOG --log-prefix "IPTABLES_DROPPED_PACKET" 
-A INPUT -m comment --comment "999 drop all" -j DROP 
-A OUTPUT -p tcp -m multiport --dports 8140,8139 -m comment --comment "1000 puppet" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 22,80,111,161,162,443,1389,3000,25151,7788,9999 -m comment --comment "1001 basetcp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 8080,8090,8888,662,875,2020,2049,4001,4045,4577 -m comment --comment "1002 bvpstcp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 57004,57005,57006 -m comment --comment "1003 hyperic" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 514 -m comment --comment "1004 syslog" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 514 -m comment --comment "1004 syslogudp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 6162 -m comment --comment "1006 embmudp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 111,123,623,1129,9876,25151 -m comment --comment "1010 baseudp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m multiport --dports 662,875,2020,2049,4001,4045 -m comment --comment "1011 nfsudp" -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 13724,1556,13783,13722 -m comment --comment "1012 netbackup" -m state --state NEW -j ACCEPT 
-A OUTPUT -s 10.175.132.229/32 -p udp -m multiport --sports 5093 -m comment --comment "1013 sentinel1" -m state --state NEW -j ACCEPT 
-A OUTPUT -s 10.175.132.231/32 -p udp -m multiport --sports 5093 -m comment --comment "1014 sentinel2" -m state --state NEW -j ACCEPT 
-A OUTPUT -d 10.175.132.229/32 -p udp -m multiport --dports 5093 -m comment --comment "1015 sentinel3" -m state --state NEW -j ACCEPT 
-A OUTPUT -d 10.175.132.231/32 -p udp -m multiport --dports 5093 -m comment --comment "1016 sentinel4" -m state --state NEW -j ACCEPT 
-A OUTPUT -p icmp -m comment --comment "1100 icmp" -j ACCEPT 
-A OUTPUT -m comment --comment "1900 related established" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -m comment --comment "1901 local loop" -j ACCEPT 
-A OUTPUT -m comment --comment "1902 log" -j LOG --log-prefix "IPTABLES_DROPPED_PACKET" 
-A OUTPUT -m comment --comment "1999 drop all" -j DROP 
COMMIT
# Completed on Fri Aug  8 10:32:28 2014
